<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signinVM" type="com.nguyenquoctruongshome.app.modules.signin.data.viewmodel.SigninVM"/>
    </data>
    <LinearLayout android:id="@+id/linear2SignIn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_25pxv"
        android:paddingEnd="@dimen/_24pxh"
        android:paddingStart="@dimen/_24pxh"
        android:paddingTop="@dimen/_25pxv" style="@style/groupStylegray_100">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowlohoappicon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageLohoappiconOne"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_40pxh"
                android:layout_width="@dimen/_40pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_loho_appicon"
                tools:ignore="ContentDescription" tools:src="@drawable/img_loho_appicon"/>
            <ImageView android:id="@+id/imageLohoappnameOne"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_27pxh"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_111pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_loho_appname_indigo_400"
                tools:ignore="ContentDescription" tools:src="@drawable/img_loho_appname_indigo_400"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnsigninto"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_22pxv"
            android:paddingEnd="@dimen/_20pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtSigninto"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="@dimen/_9pxh"
                android:singleLine="true"
                android:text="@{signinVM.signinModel.txtSigninto}"
                style="@style/txtPoppinsmedium17" tools:text="@string/msg_sign_in_to_jobiago"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInputwithicon"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPosition"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtPosition}"
                    style="@style/txtPoppinsmedium13" tools:text="@string/lbl_email_address"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_teal_50_radius_4"
                    android:ellipsize="end"
                    android:hint="@string/msg_simonehane_yahoo_com"
                    android:id="@+id/etEmail" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_14pxh"
                    android:paddingStart="@dimen/_14pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={signinVM.signinModel.etEmailValue}"
                    android:textColorHint="@color/gray_900_03"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInputwithicon1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPositionOne"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtPositionOne}"
                    style="@style/txtPoppinsmedium13" tools:text="@string/lbl_password"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_teal_50_radius_4"
                    android:drawableEnd="@drawable/img_icon_viewpassword"
                    android:drawablePadding="@dimen/_30pxh"
                    android:ellipsize="end" android:hint="@string/lbl"
                    android:id="@+id/etPassword"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_11pxh"
                    android:paddingBottom="@dimen/_9pxv"
                    android:paddingEnd="@dimen/_16pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:singleLine="true"
                    android:text="@={signinVM.signinModel.etPasswordValue}"
                    android:textColorHint="@color/gray_900_03"
                    style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowicontickOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageIcontickOne"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icon_tick_square"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_icon_tick_square"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPositionTwo"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtPositionTwo}"
                    style="@style/txtPoppinsregular13" tools:text="@string/lbl_remember_me"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotpassword"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtForgotpassword}"
                    style="@style/txtPoppinsmedium13_1" tools:text="@string/msg_forgot_password"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignIn"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_52pxv"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="@dimen/_286pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_in"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtUiuxdesigner"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{signinVM.signinModel.txtUiuxdesigner}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_or"/>
            <LinearLayout android:id="@+id/linearRowcontinuewith"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_41pxh"
                android:paddingStart="@dimen/_41pxh"
                android:paddingTop="@dimen/_14pxv" style="@style/groupStylewhite_1">
                <ImageView android:id="@+id/imageImage"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group_91"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_group_91"/>
                <TextView android:ellipsize="end"
                    android:gravity="bottom"
                    android:id="@+id/txtContinuewith"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtContinuewith}"
                    style="@style/txtPoppinsregular13_1" tools:text="@string/msg_continue_with_google"/>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowvectorOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_34pxh"
                android:paddingStart="@dimen/_34pxh"
                android:paddingTop="@dimen/_15pxv" style="@style/groupStyleindigo_500cornerRadius">
                <ImageView android:id="@+id/imageVectorOne"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:id="@+id/txtContinuewith1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtContinuewith1}"
                    style="@style/txtPoppinsregular13_2" tools:text="@string/msg_continue_with_facebook"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3pxv"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="@dimen/_9pxh"
            android:singleLine="true"
            android:text="@{signinVM.signinModel.txtConfirmation}"
            style="@style/txtPoppinsmedium17_1" tools:text="@string/msg_don_t_have_an_account"/>
    </LinearLayout>
</layout>
